--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-router": "^7.6.3",
+    "react-router-dom": "^7.6.3",
     "swiper": "^11.1.1",
     "typewriter-effect": "^2.21.0"
   },
