--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.3.4",
     "gsap": "^3.13.0",
     "lenis": "^1.3.16",
+    "lucide-react": "^0.562.0",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
