--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@gsap/react": "^2.1.2",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "framer-motion": "^12.26.1",
     "gsap": "^3.13.0",
     "lenis": "^1.3.16",
     "lucide-react": "^0.562.0",
